PR middle-end/77683 - ICE on %lf directive in format_floating in

gcc/testsuite/ChangeLog:

	PR middle-end/77683
	* gcc.dg/tree-ssa/builtin-sprintf-warn-1.c: Add test cases.

gcc/ChangeLog:

	PR middle-end/77683
	* gimple-ssa-sprintf.c (format_integer): Fail gracefully when
	length modifier is not expected.
	(format_floating): Ignore l length modifier and fail gracefuly
	when it isn't one of the other expected ones.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@240583 138bc75d-0d04-0410-961f-82ee72b054a4